tests/type-reconstruction/ill-typed/pairs/pairs-5.stella
language core;

extend with #pairs, #type-reconstruction;

fn main(x : Nat) -> auto {
  return
    (fn(x : Bool) { return { { { x, x }, { x, x } }, { { x, Nat::iszero(x) }, { x, x } } } })(0)
}
